tests/mypy_function_wrapper_cls_t6.out
tests/mypy_function_wrapper_cls_t6.py:19: error: Argument 2 to "FunctionWrapper" has incompatible type "str"; expected "Callable[[Callable[..., Any], Any, tuple[Any, ...], dict[str, Any]], Any]"  [arg-type]
tests/mypy_function_wrapper_cls_t6.py:20: error: Argument 2 to "FunctionWrapper" has incompatible type "None"; expected "Callable[[Callable[..., Any], Any, tuple[Any, ...], dict[str, Any]], Any]"  [arg-type]
Found 2 errors in 1 file (checked 1 source file)
